{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 130,
  "lineage": "d0cfb5a9-7e2b-da3b-f5cb-6c3631758079",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:855319736794:loadbalancer/app/satispay/206fcc898f9dff6c",
            "arn_suffix": "app/satispay/206fcc898f9dff6c",
            "dns_name": "satispay-551595858.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:855319736794:loadbalancer/app/satispay/206fcc898f9dff6c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "satispay",
            "security_groups": [
              "sg-0c76b96d1950acb0a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07721e5f869a81677"
              },
              {
                "subnet_id": "subnet-08a8d24cf411f5a5f"
              },
              {
                "subnet_id": "subnet-0a96223e2be7c17ce"
              }
            ],
            "subnets": [
              "subnet-07721e5f869a81677",
              "subnet-08a8d24cf411f5a5f",
              "subnet-0a96223e2be7c17ce"
            ],
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0640394e394eca0ef",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.alb_http_sg.aws_security_group.this",
            "module.alb_http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:855319736794:listener/app/satispay/206fcc898f9dff6c/d476af1a089f8483",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:855319736794:targetgroup/satispay/680548e6f1785e22",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:855319736794:listener/app/satispay/206fcc898f9dff6c/d476af1a089f8483",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:855319736794:loadbalancer/app/satispay/206fcc898f9dff6c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "satispay-lab"
            },
            "tags_all": {
              "Environment": "satispay-lab"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb_http_sg.aws_security_group.this",
            "module.alb_http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:855319736794:targetgroup/satispay/680548e6f1785e22",
            "arn_suffix": "targetgroup/satispay/680548e6f1785e22",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:855319736794:targetgroup/satispay/680548e6f1785e22",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "satispay",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0640394e394eca0ef"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb_http_sg.aws_security_group.this",
            "module.alb_http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:855319736794:security-group/sg-0c76b96d1950acb0a",
            "description": "Security group for satispay",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c76b96d1950acb0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "93.46.107.59/32"
                ],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "satispay-alb-http-20210811092034288300000002",
            "name_prefix": "satispay-alb-http-",
            "owner_id": "855319736794",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay-alb-http"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay-alb-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0640394e394eca0ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-4060791986",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c76b96d1950acb0a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_http_sg.aws_security_group.this",
            "module.alb_http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "93.46.107.59/32"
            ],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-3232790166",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c76b96d1950acb0a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.alb_http_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.asg_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:855319736794:security-group/sg-05e473008e50bc76b",
            "description": "HTTP SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e473008e50bc76b",
            "ingress": [
              {
                "cidr_blocks": [
                  "93.46.107.59/32"
                ],
                "description": "Ingress Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c76b96d1950acb0a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "satispay-sg-20210811083902868500000001",
            "name_prefix": "satispay-sg-",
            "owner_id": "855319736794",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay-sg"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0640394e394eca0ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.asg_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-2235379760",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05e473008e50bc76b",
            "self": false,
            "source_security_group_id": "sg-0c76b96d1950acb0a",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_http_sg.aws_security_group.this",
            "module.alb_http_sg.aws_security_group.this_name_prefix",
            "module.asg_sg.aws_security_group.this",
            "module.asg_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.asg_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2017076109",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05e473008e50bc76b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg_sg.aws_security_group.this",
            "module.asg_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.asg_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "93.46.107.59/32"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-1725340224",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05e473008e50bc76b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.asg_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:855319736794:internet-gateway/igw-0cc3dd05f2c16a0aa",
            "id": "igw-0cc3dd05f2c16a0aa",
            "owner_id": "855319736794",
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc"
            },
            "vpc_id": "vpc-0640394e394eca0ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc3dd05f2c16a0aa",
            "id": "r-rtb-0b0ea893d6107c53c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b0ea893d6107c53c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:855319736794:route-table/rtb-0b0ea893d6107c53c",
            "id": "rtb-0b0ea893d6107c53c",
            "owner_id": "855319736794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc3dd05f2c16a0aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc-public"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc-public"
            },
            "vpc_id": "vpc-0640394e394eca0ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3c860908feb57ae",
            "route_table_id": "rtb-0b0ea893d6107c53c",
            "subnet_id": "subnet-07721e5f869a81677"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccd3445c8814fcaf",
            "route_table_id": "rtb-0b0ea893d6107c53c",
            "subnet_id": "subnet-08a8d24cf411f5a5f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020505e88895e510e",
            "route_table_id": "rtb-0b0ea893d6107c53c",
            "subnet_id": "subnet-0a96223e2be7c17ce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:855319736794:subnet/subnet-07721e5f869a81677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-07721e5f869a81677",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855319736794",
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc-public-eu-west-1a"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc-public-eu-west-1a"
            },
            "vpc_id": "vpc-0640394e394eca0ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:855319736794:subnet/subnet-08a8d24cf411f5a5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.11.0/24",
            "id": "subnet-08a8d24cf411f5a5f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855319736794",
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc-public-eu-west-1b"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc-public-eu-west-1b"
            },
            "vpc_id": "vpc-0640394e394eca0ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:855319736794:subnet/subnet-0a96223e2be7c17ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.12.0/24",
            "id": "subnet-0a96223e2be7c17ce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855319736794",
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc-public-eu-west-1c"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc-public-eu-west-1c"
            },
            "vpc_id": "vpc-0640394e394eca0ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:855319736794:vpc/vpc-0640394e394eca0ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0e979d7bc1e8abe2d",
            "default_route_table_id": "rtb-0ca5fff28b5d3ff56",
            "default_security_group_id": "sg-0445b15021a62dbc3",
            "dhcp_options_id": "dopt-e6949380",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0640394e394eca0ef",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ca5fff28b5d3ff56",
            "owner_id": "855319736794",
            "tags": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc"
            },
            "tags_all": {
              "Environment": "satispay-lab",
              "Name": "satispay-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}